--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,20 +63,21 @@ figcaption {
     text-decoration: none;
     color: #323A45;
     font-weight: bold;
-    padding-bottom: 5vh;
-    font-size: 0.8rem;
-    line-height: 4vh;
+    padding-bottom: 3vh;
+    font-size: 0.73rem;
+    line-height: 3vh;
 }
 
 h2 {
-    font-size: 0.8rem;
+    font-size: 0.73rem;
     line-height: 4vh;
     color:  #323A45;
-    padding-bottom: 5vh;
+    padding-bottom: 4vh;
 }
 .company {
     color: #848484;
     display: block;
+
 }
 .big {
     grid-column: 1 / -1;
@@ -109,7 +110,7 @@ footer .nav__p {
 }
 
 /*Media Queries*/
-@media only screen and (max-width: 600px) { /*If the browser window is 600px or smaller*/
+@media only screen and (max-width: 600px) {
     .menu {
         padding: .3rem;
         display: flex; 
@@ -119,7 +120,6 @@ footer .nav__p {
         position: absolute;
         top: 7vh;
         right: 7%;
-      /* flex: 1; */
     }
     .header-menu {
         display: none;
@@ -135,7 +135,6 @@ footer .nav__p {
     .hamburger {
         display: flex;
     }
-    /*when hamburger icon is checked, nav links will pop out */
     #menu-toggle:checked ~ .header-menu {
         display: flex;
         flex-direction: column;
