--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,6 @@
 }
 
 /*Navigation*/
-
 .header-nav, .bottom-nav {
     display: flex;
     justify-content: space-between;
@@ -30,7 +29,7 @@
 }
 .nav__link, .nav__link-inline{
     text-decoration: none;
-    font-size: 0.9rem;
+    font-size: 1rem;
     color:#000;
     font-weight: bold;
 }
@@ -64,12 +63,12 @@ figcaption {
     color: #323A45;
     font-weight: bold;
     padding-bottom: 3vh;
-    font-size: 1rem;
+    font-size: 1.1rem;
     line-height: 3vh;
 }
 
 h2 {
-    font-size: 1rem;
+    font-size: 1.1rem;
     line-height: 4vh;
     color:  #323A45;
     padding-bottom: 4vh;
@@ -96,7 +95,7 @@ img:hover {
     width: 27%;
 }
 .nav__p {
-    font-size: 0.9rem;
+    font-size: 1rem;
     color: #000;
 }
 .bottom-nav h2{
@@ -143,13 +142,13 @@ footer .nav__p {
         grid-template-columns: 1fr;
         gap: 5px;
     }
-    p {
-        font-size: 1rem;
-    }
     .figure {
         width: 50%;
         height: 10vh;
     } 
+}
+
+@media only screen and (max-width: 770px) { 
     .bottom-nav {
         flex-direction: column;
     }
