--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ footer .nav__p {
 /*Media Queries*/
 @media only screen and (max-width: 640px) {
     .menu {
-        padding: .3rem;
+        padding-top: .7rem;
         display: flex; 
         align-items: flex-end;
         flex-direction: column;
